--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <main>
     <h1>You signed in!</h1>
+    <img src="/images/map-lying-wooden-table.jpeg" alt="map on a table" style="width: 350px; height: auto;">
+    <p>Look at the map.</p>
   </main>
 </body>
 
